--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,9 @@ var/
 *.manifest
 *.spec
 
+# Google drive folders
+.tmp.driveupload
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
